odoo-gke/4-odoo-gke.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo-gke
  labels:
    app: odoo-gke
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo-gke
  template:
    metadata:
      labels:
        app: odoo-gke
    spec:
      containers:
      - name: odoo-gke
        image: odoo
        ports:
        - containerPort: 8069
        securityContext:
          privileged: true
          runAsUser: 0 
        volumeMounts:
        - name: pv-odoo-gke-01
          mountPath: /mnt/extra-addons
          subPath: extra-addons
        - name: pv-odoo-gke-02
          mountPath: /etc/odoo
          subPath: odoo
        - name: pv-odoo-gke-03
          mountPath: /root
          subPath: root
        - name: odoo-gke-config
          mountPath: /etc/odoo/odoo.conf
          subPath: odoo.conf
      volumes:
      - name: pv-odoo-gke-01
        persistentVolumeClaim:
          claimName: pvc-odoo-gke-01
      - name: pv-odoo-gke-02
        persistentVolumeClaim:
          claimName: pvc-odoo-gke-02
      - name: pv-odoo-gke-03
        persistentVolumeClaim:
          claimName: pvc-odoo-gke-03
      - name: odoo-gke-config
        configMap:
          name: odoo-gke-config
