odoo-gke/5-service-odoo-gke.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-gke-service
  labels:
    app: test-odoo-proyectos
spec:
  selector:
    app: test-odoo-proyectos
  ports:
    - name: http
#    - protocol: TCP
      port: 8069
      targetPort: 8069
